# CHIP-8-Emulator

./: .gitignore  CMakeLists.txt  README.md  chip8.c  chip8.h  constants.h  instructions.c  instructions.h  main.c  sdl.h  utils.h
